--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -21,7 +21,8 @@ html, body {
   transition: left 0.5s linear;
 }
 
-#slider-checkbox {
+/* #slider-checkbox */
+input[type="checkbox"] {
   display: none;
 }
 
