--- a/my-slider/style.css
+++ b/my-slider/style.css
@@ -22,7 +22,7 @@
   width: 9999%;
   padding: 0;
   margin: 0;
-  /* slide-wraper 的 left 才有用啊 */
+  /* 這樣 slide-wraper 的 left 才有用啊 */
   position: relative;
 }
 
@@ -57,6 +57,8 @@
 #prev-btn, #next-btn {
   position: absolute;
   top: 50%;
+  background-color: transparent;
+  border: 0;
 }
 
 #prev-btn {
@@ -67,3 +69,25 @@
   right: 20px;
 }
 
+#prev-btn:focus, #next-btn:focus {
+  outline: none;
+}
+
+#prev-btn::after, #next-btn::after {
+  display: block;
+  content: "";
+  height: 20px;
+  width: 20px;
+  border-right: 3px solid white;
+  border-bottom: 3px solid white;
+
+  cursor: pointer;
+}
+
+#prev-btn::after {
+  transform: rotate(135deg);
+}
+
+#next-btn::after {
+  transform: rotate(-45deg);
+}
