--- a/my-slider/style.css
+++ b/my-slider/style.css
@@ -22,8 +22,11 @@
   width: 9999%;
   padding: 0;
   margin: 0;
+  left: 0;
   /* 這樣 slide-wraper 的 left 才有用啊 */
   position: relative;
+
+  transition: 2s;
 }
 
 .slide-wraper li {
