Light button for switching pages.

--- a/my-slider/src/style.css
+++ b/my-slider/src/style.css
@@ -94,3 +94,26 @@
     transform: rotate(-45deg);
   }
 }
+
+.slider-buttons {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  > li {
+    display: inline-block;
+    position: relative;
+    padding: 5px;
+    background: rgba(255,255,255,0.5);
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:not(:first-child) {
+      margin-left: 5px;
+    }
+
+    &:active {
+      background: white;
+    }
+  }
+}
